# Project_cpp_iti

./: README.md  logs.txt
Phase1/: CMakeLists.txt  a.out  main.cpp
Phase1/Include/: ConsoleSinkImpl.hpp  ILogSink.hpp  LogManager.hpp  LogMessage.hpp
Phase1/Include/safe/: SafeFile.hpp  SafeSocket.hpp
Phase1/Include/telemetry/: FileTelemetrySourceImpl.hpp  SocketTelemetrySourceImpl.hpp
Phase1/Source/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  LogMessage.cpp
Phase1/Source/safe/: SafeFile.cpp  SafeSocket.cpp
Phase1/Source/sinks/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp
Phase1/Source/telemetry/: SocketTelemetrySourceImpl.cpp
Phases/: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
Phases/Include/: Formatter.hpp  LogManager.hpp  LogMessage.hpp  LoggingApp.hpp  RingBuffer.hpp  ThreadPool.hpp
Phases/Include/Types_of_enums_data/: log_types.hpp  severity_type.hpp  sinks_types.hpp  telemetry_source.hpp
Phases/Include/policy/: CPU_policy.hpp  GPU_policy.hpp  RAM_policy.hpp
Phases/Include/safe/: SafeFile.hpp  SafeSocket.hpp
Phases/Include/sinks/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  ILogSink.hpp
Phases/Include/telemetry/: FileTelemetrySourceImpl.hpp  ITelemetrySource.hpp  SocketTelemetrySourceImpl.hpp  SomeIPTelemetrySourceImpl.hpp
Phases/Source/: LogManager.cpp  LogMessage.cpp  LoggingApp.cpp  README.md
Phases/Source/safe/: README.md  SafeFile.cpp  SafeSocket.cpp
Phases/Source/sinks/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  README.md
Phases/Source/telemetry/: FileTelemetrySourceImpl.cpp  README.md  SocketTelemetrySourceImpl.cpp  SomeIPTelemetrySourceImpl.cpp
Phases/Source/tests/PHASE1/: test.txt
Phases/Source/tests/Phase2/: test.txt
Phases/Source/tests/phase3/: test.txt
Phases/Source/tests/phase4/: test.txt
Phases/Source/tests/phase5/: main.txt
Phases/app/: README.md  main.cpp  server.cpp
Phases/gen_src/fdepl/: gpu.fdepl
Phases/gen_src/fidl/omnimetron/gpu/: gpu.fidl
Phases/gen_src/src-gen/v1/omnimetron/gpu/: GpuUsageData.hpp  GpuUsageDataProxy.hpp  GpuUsageDataProxyBase.hpp  GpuUsageDataSomeIPCatalog.json  GpuUsageDataSomeIPDeployment.cpp  GpuUsageDataSomeIPDeployment.hpp  GpuUsageDataSomeIPProxy.cpp  GpuUsageDataSomeIPProxy.hpp  GpuUsageDataSomeIPStubAdapter.cpp  GpuUsageDataSomeIPStubAdapter.hpp  GpuUsageDataStub.hpp  GpuUsageDataStubDefault.hpp
Phases/scripts/: shell_log_src.sh  shell_logs.txt
Phases/test/: templates.cpp
Phases/test /: chrono_lib.cpp  mutex.cpp  test_home_template.cpp  test_temolate.cpp  train_phase1.cpp
Phases/test /phase2/INC/: FileTelemetrySocket.hpp  FileTelemetrySource.hpp  safefile.hpp
Phases/test /phase2/SRC/: FileTelemetrySocket.cpp  FileTelemetrySource.cpp  log.txt  train_phase2.cpp
Phases/test/phase2/INC/: ITelemetrySource.hpp
Phases/test/phase2/SRC/: safefile.cpp  socket.cpp
